# kadmoo-video-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-ltx.txt  requirements.txt
docs/: DEPLOY-RUNPOD.md  E2E.md  LTX-COMPAT-RUNBOOK.md  LTX-KF-A2V-EVAL.md  LTX2-ASSET-CHECKLIST.md  LTX2-INSTALL-RUNPOD.md  RUNPOD-NATIVE.md  RUNPOD-ONE-PAGE-HE.md  TROUBLESHOOT-STUCK-QUEUED.md
scripts/: install-ltx2.sh  ltx_a2vid_scene.py  ltx_i2v_scene.py  ltx_kf_interpolation_scene.py  ltx_official_try_import.py  ltx_spatial_upscale.py  run-native-api.sh  run-native-worker.sh  runpod-bootstrap.sh  runpod-start.sh  runpod-status.sh  runpod-stop.sh
src/: __init__.py  config.py  job_state.py  main.py
src/api/: deps.py
src/api/routes/: health.py  jobs.py  training.py
src/pipelines/: bgm.py  identity.py  lora_cache.py  ltx_native.py  postprocess.py  scene_crossfade.py  tts.py  upscale.py  video_render.py
src/shared/: errors.py  types.py
src/storage/: supabase_upload.py
src/webhook/: dispatcher.py  training_notify.py
src/worker/: __init__.py  celery_app.py  tasks.py  training_tasks.py
tests/: test_api.py
